filereceiver: Fix crash when sending device is null

BUG: 342581